--- a/imitativeWebpage/css/style.css
+++ b/imitativeWebpage/css/style.css
@@ -2,7 +2,7 @@
 body {
     font-family: "Roboto", serif;
     font-optical-sizing: auto;
-    font-weight: <weight>;
+    font-weight: 400;
     font-style: normal;
     font-variation-settings:
       "wdth" 100;
@@ -67,6 +67,7 @@ ul {
 }
 
 .topHeaderLinks {
+    position: relative;
     color: #f2f3f5;
 }
 
@@ -75,7 +76,7 @@ a {
     text-decoration: none;
 }
 
-button {
+.moreButton {
     background-color: rgb(15, 15, 62);
     padding: 10px;
 }
@@ -126,8 +127,43 @@ li {
     padding: 10px;
     outline: auto;
 }
-footer {
-    /* background-color: #0b0b31; */
+
+.cirButtonContainer {
+    display: flex;
+    flex-wrap: nowrap;
+    align-content: normal;
+    justify-content: center;
+    gap: 5px;
+    margin-top: 5px;
+}
+
+.cirButton {
+    display: block;
+    bottom: 10px;
+    padding: 10px;
+    border: none;
+    border-radius: 50%;
+    background-color: #808080;
+}
+
+.navButtons {
+    color: #f2f3f5;
+    background-color: #0b0b31;
     
 }
 
+footer {
+    background-color: #0b0b31;
+    color: #f2f3f5;
+    
+    
+}
+
+.subfooter {
+    color: #f2f3f5;
+    background-color: #0b0b31;
+}
+
+.pageBorder {
+    padding: 30px;
+}
